<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="Create Project"
            app:titleCentered="true" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/gap_lg">

            <TextView
                android:id="@+id/project_name_input_label"
                style="@style/Theme.Promise.InputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Project Title" />

            <EditText
                android:id="@+id/project_name_input"
                style="@style/Theme.Promise.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_gray"
                android:hint="@string/projectNameHint"
                android:inputType="textPersonName"/>

            <TextView
                android:id="@+id/project_description_input_label"
                style="@style/Theme.Promise.InputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Project Description" />

            <EditText
                android:id="@+id/project_description_input"
                style="@style/Theme.Promise.EditText"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="start|top"
                android:hint="@string/projectDescHint"
                android:imeOptions="actionNext|actionDone|flagNoEnterAction"
                android:inputType="textShortMessage"/>

            <Button
                android:id="@+id/create_project_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Create Project"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>