...
        android:id="@+id/loginEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailLabel" />

    <EditText
        android:id="@+id/loginEmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/loginPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordLabel" />

    <EditText
        android:id="@+id/loginPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordHint"
        android:inputType="textPassword" />

    <Button
...
